frankenbox/iptables-frankenbox.rules
*filter
# Default policy is DROP; we need to explicitly allow any packets we
# do want.
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
# Default OUTPUT policy is ACCEPT, mainly to allow rtorrent to connect
# to other peers, which does not seem to have an option to restrict
# to a certain port range.
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:inputdrop - [0:0]
:forwarddrop - [0:0]
:outputdrop - [0:0]

########################
### INPUT CHAIN      ###
########################

# Accept loopback packets.
-A INPUT -i lo -j ACCEPT

# Allow inbound TCP traffic to sshd port.
-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 8527 -j ACCEPT

# Allow inbound HTTP traffic.
-A INPUT -p tcp --dport 80 -j ACCEPT

# Allow inbound HTTPS traffic.
-A INPUT -p tcp --dport 443 -j ACCEPT

# Allow custom fileserver port.
-A INPUT -p tcp --dport 8081 -j ACCEPT

# Allow DHCP discovery.
-A INPUT -p udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -p udp --sport 68 --dport 67 -j ACCEPT

# Allow mDNS.
-A INPUT -p udp --sport 5353 --dport 5353 -j ACCEPT

# Allow LLMNR:
# https://en.wikipedia.org/wiki/Link-Local_Multicast_Name_Resolution
-A INPUT -p igmp -d 224.0.0.1 -j ACCEPT

# Allow inbound TCP traffic to bitcoin port.
-A INPUT -p tcp --dport 8333 -j ACCEPT
-A INPUT -p tcp --dport 18333 -j ACCEPT

# Allow inbound TCP traffic to monero port.
-A INPUT -p tcp --dport 18080 -j ACCEPT

# Allow inbound TCP traffic to Tor port.
-A INPUT -p tcp --dport 9001 -j ACCEPT
-A INPUT -p tcp --sport 9001 -j ACCEPT

# Allow inbound ICMP type 0, 3 and 8 ("Echo Reply", "Destination
# Unreachable" and "Echo", i.e. ping).
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Allow inbound traffic to mosh port.
-A INPUT -p udp -m udp --dport 60001:60010 -j ACCEPT

# Explicitly whitelist established / related connections. This is a
# last-ditch safeguard to avoid locking yourself out if a too-restrictive
# rule would be applied - your current SSH connections will remain,
# giving you one last chance so you can fix the issue.
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Anything making it here is not allowed; send it to logging chain.
# Dropped packets can be checked with `journalctl -k | grep "IN=.*OUT=.*"`
-A INPUT -j inputdrop

########################
### FORWARD CHAIN    ###
########################

# Allow DNS query responses to reach docker containers.
-A FORWARD -m udp -p udp -i docker0 --dport 53 -j ACCEPT
-A FORWARD -m udp -p udp -o eth0 --dport 53 -j ACCEPT
-A FORWARD -m tcp -p tcp --sport 80 -j ACCEPT
-A FORWARD -m tcp -p tcp --dport 80 -j ACCEPT
-A FORWARD -m tcp -p tcp --sport 443 -j ACCEPT
-A FORWARD -m tcp -p tcp --dport 443 -j ACCEPT
-A FORWARD -m tcp -p tcp --sport 8080 -j ACCEPT
-A FORWARD -m tcp -p tcp --dport 8080 -j ACCEPT
-A FORWARD -m tcp -p tcp --dport 9001 -j ACCEPT

-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-1efeb5a4f035 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-1efeb5a4f035 -j DOCKER
-A FORWARD -i br-1efeb5a4f035 ! -o br-1efeb5a4f035 -j ACCEPT
-A FORWARD -i br-1efeb5a4f035 -o br-1efeb5a4f035 -j ACCEPT

-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-1efeb5a4f035 ! -o br-1efeb5a4f035 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-1efeb5a4f035 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN

# Anything making it here is not allowed; send it to logging chain.
# # Dropped packets can be checked with `journalctl -k | grep "IN=.*OUT=.*"`
-A FORWARD -j forwarddrop

########################
### OUTPUT CHAIN     ###
########################

# Implicitly allow all outgoing connections.
# -A OUTPUT -j ACCEPT

# Configure 'drop' chains, which just jump to LOG -> DROP.
#
# View logs with:
#   journalctl -k -f | grep "IN=.*OUT=.*"
#
-A forwarddrop -m limit --limit 2/min -j LOG --log-prefix "[FORWARD] IPTables-Dropped: "
-A forwarddrop -j DROP
-A inputdrop -m limit --limit 2/min -j LOG --log-prefix "[INPUT] IPTables-Dropped: "
-A inputdrop -j DROP
-A outputdrop -m limit --limit 2/min -j LOG --log-prefix "[OUTPUT] IPTables-Dropped: "
-A outputdrop -j DROP
COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-1efeb5a4f035 -j MASQUERADE
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A DOCKER -i docker0 -j RETURN

COMMIT
